# ehds-dataset-demo

./: .gitignore  README.md  pyproject.toml
src/csv_to_healthdcat/: __init__.py  converter.py  main.py
tests/: test_converter.py
