[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "csv-to-healthdcat-ttl"
version = "0.1.0"
description = "Convert CSV files to RDF Turtle format according to HealthDCAT specification"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "amitr526"}]
keywords = ["csv", "rdf", "turtle", "healthdcat", "metadata"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "rdflib>=7.0.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pyright>=1.1.398",
]

[project.scripts]
csv-to-healthdcat = "csv_to_healthdcat.main:main"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --cov=src/csv_to_healthdcat --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/csv_to_healthdcat"]
omit = ["*/tests/*"]
